// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature false, action -1, isAfter false 1`] = `
"<div><br></div>
<div class="protonmail_signature_block protonmail_signature_block-empty">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature false, action -1, isAfter true 1`] = `
"<p>test</p><div><br></div>
<div class="protonmail_signature_block protonmail_signature_block-empty">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature false, action 0, isAfter false 1`] = `
"<div><br></div>
<div class="protonmail_signature_block protonmail_signature_block-empty">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<div><br></div><p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature false, action 0, isAfter true 1`] = `
"<p>test</p><div><br></div>
<div class="protonmail_signature_block protonmail_signature_block-empty">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<div><br></div>"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature false, action 1, isAfter false 1`] = `
"<div><br></div>
<div class="protonmail_signature_block protonmail_signature_block-empty">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<div><br></div><p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature false, action 1, isAfter true 1`] = `
"<p>test</p><div><br></div>
<div class="protonmail_signature_block protonmail_signature_block-empty">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<div><br></div>"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature false, action 2, isAfter false 1`] = `
"<div><br></div>
<div class="protonmail_signature_block protonmail_signature_block-empty">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<div><br></div><p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature false, action 2, isAfter true 1`] = `
"<p>test</p><div><br></div>
<div class="protonmail_signature_block protonmail_signature_block-empty">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<div><br></div>"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature true, action -1, isAfter false 1`] = `
"<div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature true, action -1, isAfter true 1`] = `
"<p>test</p><div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature true, action 0, isAfter false 1`] = `
"<div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<div><br></div><p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature true, action 0, isAfter true 1`] = `
"<p>test</p><div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<div><br></div>"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature true, action 1, isAfter false 1`] = `
"<div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<div><br></div><p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature true, action 1, isAfter true 1`] = `
"<p>test</p><div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<div><br></div>"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature true, action 2, isAfter false 1`] = `
"<div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<div><br></div><p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature false, userSignature true, action 2, isAfter true 1`] = `
"<p>test</p><div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    
            <div class="protonmail_signature_block-proton protonmail_signature_block-empty">
        
            </div>
</div>
<div><br></div>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature false, action -1, isAfter false 1`] = `
"<div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature false, action -1, isAfter true 1`] = `
"<p>test</p><div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature false, action 0, isAfter false 1`] = `
"<div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<div><br></div><p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature false, action 0, isAfter true 1`] = `
"<p>test</p><div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<div><br></div>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature false, action 1, isAfter false 1`] = `
"<div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<div><br></div><p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature false, action 1, isAfter true 1`] = `
"<p>test</p><div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<div><br></div>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature false, action 2, isAfter false 1`] = `
"<div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<div><br></div><p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature false, action 2, isAfter true 1`] = `
"<p>test</p><div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user protonmail_signature_block-empty">
        
            </div>
    
            <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<div><br></div>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature true, action -1, isAfter false 1`] = `
"<div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    <div><br></div>
    <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature true, action -1, isAfter true 1`] = `
"<p>test</p><div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    <div><br></div>
    <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature true, action 0, isAfter false 1`] = `
"<div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    <div><br></div>
    <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<div><br></div><p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature true, action 0, isAfter true 1`] = `
"<p>test</p><div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    <div><br></div>
    <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<div><br></div>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature true, action 1, isAfter false 1`] = `
"<div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    <div><br></div>
    <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<div><br></div><p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature true, action 1, isAfter true 1`] = `
"<p>test</p><div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    <div><br></div>
    <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<div><br></div>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature true, action 2, isAfter false 1`] = `
"<div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    <div><br></div>
    <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<div><br></div><p>test</p>"
`;

exports[`signature insertSignature snapshots should match with protonSignature true, userSignature true, action 2, isAfter true 1`] = `
"<p>test</p><div><br></div><div><br></div>
<div class="protonmail_signature_block">
    <div class="protonmail_signature_block-user">
        
<strong>&gt;signature</strong>
    </div>
    <div><br></div>
    <div class="protonmail_signature_block-proton">
        Sent with <a target="_blank" href="https://proton.me/mail/home">Proton Mail</a> secure email.
    </div>
</div>
<div><br></div>"
`;
